--- a/css/app.css
+++ b/css/app.css
@@ -1,8 +1,16 @@
 @import 'rainbow.css';
-:root{
+:root {
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient( 120deg, var(--vp-c-brand-1) 30%, var(--vp-c-brand-next) );
-  --vp-home-hero-image-background-image: linear-gradient( -45deg, var(--vp-c-brand-1) 30%, var(--vp-c-brand-next) );
+  --vp-home-hero-name-background: -webkit-linear-gradient(
+    120deg,
+    var(--vp-c-brand-1) 30%,
+    var(--vp-c-brand-next)
+  );
+  --vp-home-hero-image-background-image: linear-gradient(
+    -45deg,
+    var(--vp-c-brand-1) 30%,
+    var(--vp-c-brand-next)
+  );
   --vp-home-hero-image-filter: blur(80px);
 }
 .custom-link {
