--- a/css/prism.css
+++ b/css/prism.css
@@ -3,7 +3,7 @@
  * Feel free to customize token styles 
  * by copying from a prismjs compatible theme:
  * https://github.com/PrismJS/prism-themes
- */
+ **/
 
 /* Code title styles */
 .remark-code-title {
